# hackathon-data

./: .dockerignore  .gcloudignore  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  RISA-HACKATHON-COMPLETE-GUIDE.md  app.py  build_app_data.py  build_insights.py  config.py  data_loader.py  denial_predictor.py  deploy.sh  feature_engineer.py  model_trainer.py  pyproject.toml  requirements-app.txt  requirements-transformer.txt  requirements.txt  storage.py
app_data/: completed_cases.json  criteria_kb.json  criteria_kb_merged.bak.json  criteria_kb_merged.json  denial_model.pkl  denial_stats.csv  fda_criteria.json  filing_queue.json  groundtruth_eval.json  insights.json  sample_cases.json  showcase_cases.json  summary.json  triage.json
boss-plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: AGENT_ARCHITECTURE.md  DEMO_CHECKLIST.md  DEMO_MASTER_BRIEF.md  DEMO_SCRIPT.md  DEPLOY.md  FOR_THE_FILING_TEAM.md  GRAPH_KB_RESEARCH.md  JUDGES_GUIDE.md  MEDICAL_NECESSITY_ENGINE.md  MOONSHOT_DECK.md  QA_PREP.md  README.md  ROADMAP.md  SCIENTIFIC_DISCOVERY_AGENT.md  SLIDES.md  TRANSFORMER_BRANCH.md
extraction/: batch_runner.py  extract_measurements.py  prompts.py  validators.py
pipelines/: build_app_data.py  build_criteria_kb.py  build_filing_queue.py  build_insights.py  build_showcase.py  criteria_miner.py  data_loader.py  deidentify.py  denial_triage.py  firestore_sync.py  groundtruth_eval.py  train_transformer.py
scripts/: add_cigna_policies.py  add_extra_payers.py  deploy_backend.sh  (+5 more)
(+912 files in other folders)
