[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denial-engine"
version = "1.0.0"
description = "Multi-agent prior-authorization denial-prevention engine (RISA)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "RISA" }]
keywords = ["prior-authorization", "healthcare", "llm", "agents", "fastapi"]

# Runtime dependencies for the hosted API (Cloud Run container).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
# Offline data + training pipelines (not needed in the serving image).
pipelines = [
    "google-cloud-bigquery>=3.25",
    "db-dtypes>=1.2",
    "python-dotenv>=1.0",
    "shap>=0.45",
]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
denial-engine = "denial_engine.api:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
